<resources>
    <string name="app_name">MySQLRoom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="view">view</string>
    <string name="update">update</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="add_user">Add user</string>
    <string name="user">user</string>
    <string name="userid">userid</string>
    <string name="id">id</string>
    <string name="email">email</string>
</resources>
